src/test/deca/context/invalid/intermediaire2/boolean/05minus_boolean.deca
// Description:
// Test du moins unaire sur un booléen, chose interdite.
//
// Resultats:
//  05minus_boolean.deca:10:16:
//
// Historique:
//    crée le 16/06/2022
{
    boolean x = -true;
}
